--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
     "name": "linkoo-extension",
     "version": "1.0.0",
-    "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "zip": "bestzip linkoo.zip src lib manifest.json"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@types/chrome": "0.0.130",
-        "@types/feathersjs__socketio-client": "^1.0.5"
+        "@types/feathersjs__socketio-client": "^1.0.5",
+        "bestzip": "^2.1.7"
     }
 }
